--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,20 +5,22 @@
 /* #region header */
 #site_header{
   height: 100px;
-  background-color: aqua;
+  background-color: #3161e0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .logo, .login-button{
-    width: 100px;
     height: 50px;
-    background-color: goldenrod;
-    border: 1px solid black;
     display: flex;
     align-items: center;
     padding: 3px;
+}
+
+button{
+    padding: 0.5rem;
+    border-radius: 1.2rem;
 }
 
 .login-button{
@@ -28,8 +30,6 @@
 .intestation{
     width: 500px;
     height: 50px;
-    background-color: goldenrod;
-    border: 1px solid black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -45,17 +45,15 @@
 }
 
 .flex-container-first{
-    background-color: blue;
     display: flex;
     justify-content: center;
+    background-color: #3161e0;
 }
 
 #jumbotron{
-    width: 600px;
-    height: 300px;
-    background-color: pink;
     align-self: center;
     margin: 20px;
+    max-width: fit-content;
 }
 
 /* #endregion main-first-container*/
