--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 *{
     box-sizing: border-box;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 /* #region header */
 #site_header{
@@ -12,7 +13,6 @@
 }
 
 .logo, .login-button{
-    height: 50px;
     display: flex;
     align-items: center;
     padding: 3px;
@@ -21,10 +21,12 @@
 button{
     padding: 0.5rem;
     border-radius: 1.2rem;
+    border: transparent;
 }
 
 .login-button{
     justify-content: flex-end;
+
 }
 
 .intestation{
@@ -33,6 +35,11 @@ button{
     display: flex;
     align-items: center;
     justify-content: center;
+    justify-content: space-evenly;
+}
+
+.nav-log{
+    color: white;
 }
 /* #endregion header */
 
