--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,12 +68,9 @@ button{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: purple;
 }
 
 .invite{
-    height: 300px;
-    background-color: turquoise;
     align-self: center;
     flex-direction: row;
     margin-top: 20px;
@@ -81,27 +78,33 @@ button{
 }
 
 .left{
-    background-color: red;
-    width: 450px;
+
 }
 
 .right{
-    width: 250px;
-    background-color: blue;
+    max-width: 12%;
+}
+
+h2{
+    line-height: 2rem;
+}
+
+#server-organisation{
+    margin-top: 10%;
 }
 
 /* #endregion invite-container*/
+
 
 /* #region easy-find-container */
 #easy-find{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: gray;
+    background-color: #f6f6f6;
 }
 
 .easy-find{
-    height: 300px;
     align-self: center;
     flex-direction: row;
     margin-top: 20px;
