--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,8 +73,7 @@ button{
 .invite{
     align-self: center;
     flex-direction: row;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    padding: 3%;
 }
 
 .left{
@@ -102,13 +101,12 @@ h2{
     flex-direction: row;
     justify-content: center;
     background-color: #f6f6f6;
+    padding: 3%;
 }
 
 .easy-find{
     align-self: center;
     flex-direction: row;
-    margin-top: 20px;
-    margin-bottom: 20px;
 }
 
 /* #endregion .easy-find-container*/
@@ -118,15 +116,12 @@ h2{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    background-color: yellow;
+    padding: 3%;
 }
 
 .fandom{
-    height: 300px;
     align-self: center;
     flex-direction: row;
-    margin-top: 20px;
-    margin-bottom: 20px;
 }
 
 /* #endregion fandom-container*/
