--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@
 }
 /* #region header */
 #site_header{
-  height: 100px;
   background-color: #3161e0;
   display: flex;
   justify-content: center;
@@ -18,7 +17,7 @@
     padding: 3px;
 }
 
-button{
+.login-button{
     padding: 0.5rem;
     border-radius: 1.2rem;
     border: transparent;
@@ -81,7 +80,7 @@ button{
 }
 
 .right{
-    max-width: 12%;
+    max-width: 16%;
 }
 
 h2{
@@ -128,18 +127,22 @@ h2{
 
 /* #region in-touch-container*/
 #in-touch{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: lightsteelblue;
+    text-align: center;
+    background-color: #f6f6f6;
+    padding: 3%;
+   
 }
 
 #content-in-touch{
-    width: 600px;
-    height: 600px;
-    background-color: darkgreen;
-    margin-top: 20px;
-    margin-bottom: 20px;
+}
+
+#mac-button{
+    background-color: #8ea1e1;
+    color: white;
+    border-radius: 3rem;
+    padding: 1rem;
+    margin-top: 3rem;
+    font-size: larger;
 }
 
 /* #endregion in-touch-container*/
