--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,13 +48,31 @@ button{
 }
 
 .flex-container-first{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url(/assets/img/jumbo.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding-top: 5%;
     background-color: #3161e0;
-    margin-bottom: 0;
-    text-align: center;
 }
 
-#jumbotron{
-    max-width: 100%; 
+h1{
+  color: white;
+  font-weight: 900; 
+  padding-bottom: 3%;
+  font-size: 3.5rem; 
+}
+
+#under-heading-intestation{
+    text-align: center;
+    max-width: 30%;
+    color: white;
+    font-size: 20px;
+    line-height: 2rem;
 }
 
 /* #endregion main-first-container*/
@@ -131,6 +149,14 @@ h2{
 }
 
 #content-in-touch{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#video-latency{
+    padding-top: 1rem;
+    max-width: 35%;
 }
 
 #mac-button{
