--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,6 +213,7 @@ h2{
     background-color: #23272a;
     display: flex;
     justify-content: center;
+    border-top: 1px solid white;
 }
 
 #register-button{
