--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,14 @@ h2{
 
 /* #endregion invite-container*/
 
+.wave{
+    filter: invert(100%) sepia(1%) saturate(202%) hue-rotate(138deg) brightness(114%) contrast(93%);
 
+}
+
+#wave-secondary{
+    filter: invert(86%) sepia(99%) saturate(2%) hue-rotate(186deg) brightness(110%) contrast(97%);
+}
 /* #region easy-find-container */
 #easy-find{
     display: flex;
