--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,9 +128,10 @@ h2{
 
 }
 
-#wave-secondary{
-    filter: invert(86%) sepia(99%) saturate(2%) hue-rotate(186deg) brightness(110%) contrast(97%);
+.secondary{
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(334deg) brightness(103%) contrast(105%);
 }
+
 /* #region easy-find-container */
 #easy-find{
     display: flex;
@@ -138,6 +139,7 @@ h2{
     justify-content: center;
     background-color: #f6f6f6;
     padding: 3%;
+    margin-bottom: -5rem;
 }
 
 .easy-find{
@@ -221,6 +223,7 @@ h2{
     display: flex;
     justify-content: center;
     border-top: 1px solid white;
+    align-items: center;
 }
 
 #register-button{
