--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,15 @@
   align-items: center;
 }
 
+.href{
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
+    color: white;
+}
+
 .logo, .login-button{
     display: flex;
     align-items: center;
