--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,8 @@ h2{
     justify-content: center;
     background-color: #f6f6f6;
     padding: 3%;
-    margin-bottom: -5rem;
+    margin-bottom: -6rem;
+    padding-bottom: 7%;
 }
 
 .easy-find{
