--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,7 +138,8 @@ h2{
 }
 
 .secondary{
-    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(334deg) brightness(103%) contrast(105%);
+    transform: rotate(180deg);
+    filter: invert(100%) sepia(1%) saturate(202%) hue-rotate(138deg) brightness(114%) contrast(93%);   
 }
 
 /* #region easy-find-container */
@@ -148,7 +149,7 @@ h2{
     justify-content: center;
     background-color: #f6f6f6;
     padding: 3%;
-    margin-bottom: -6rem;
+
     padding-bottom: 7%;
 }
 
