--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
 }
 
 .href{
@@ -65,7 +68,7 @@ a:hover{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    padding-top: 5%;
+    padding-top: 8%;
     background-color: #3161e0;
 }
 
@@ -149,8 +152,6 @@ h2{
     justify-content: center;
     background-color: #f6f6f6;
     padding: 3%;
-
-    padding-bottom: 7%;
 }
 
 .easy-find{
